--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -201,6 +201,10 @@ html[dir="rtl"] .icon {
     background-position: calc(var(--tile) * 4) calc(var(--tile) * 4);
 }
 
+.icon-mountain {
+    background-position: calc(var(--tile) * 8) 0;
+}
+
 .icon-multipolygon {
     background-position: calc(var(--tile) * 7) calc(var(--tile) * 5);
 }
