wip: add back hover on context menu icon buttons

--- a/umap/static/umap/css/contextmenu.css
+++ b/umap/static/umap/css/contextmenu.css
@@ -43,6 +43,7 @@
     margin-bottom: var(--text-margin);
 }
 
+.umap-contextmenu .dark li button .icon:hover,
 .dark.umap-contextmenu li button .icon:hover {
     background-color: var(--color-mediumGray);
 }
