--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -119,7 +119,12 @@ input[type="submit"] {
 .dark [type="button"] {
     background-color: var(--color-darkerGray);
     color: var(--text-color);
-    border: 1px solid var(--color-veryDarkGray);
+    border: 1px solid var(--color-lightGray);
+}
+
+.dark.umap-edit-bar .button,
+.dark.umap-edit-bar [type="button"] {
+    border: none;
 }
 
 .button.primary {
@@ -202,6 +207,9 @@ input+.help-text {
 .formbox {
     min-height: 36px;
     margin-bottom: 14px;
+    display: flex;
+    flex-direction: column;
+    gap: var(--text-margin);
 }
 
 .formbox.with-switch {
@@ -210,12 +218,6 @@ input+.help-text {
 
 .with-switch {
     overflow: hidden;
-}
-
-.formbox select,
-.formbox textarea,
-.formbox input {
-    margin-bottom: var(--text-margin);
 }
 
 fieldset.formbox {
@@ -720,6 +722,7 @@ input.blur {
     border-start-start-radius: 0;
     border-end-start-radius: 0;
     box-sizing: border-box;
+    border: none;
 }
 
 input[type=hidden].blur+.button,
