--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -1032,14 +1032,11 @@ a.umap-control-caption,
 
 .umap-cluster-icon {
     border-radius: 50%;
-    height: 32px;
-    width: 32px;
-    margin-left: -16px;
-    margin-top: -16px;
     border: 4px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: bold;
 }
 
 /* ********************************* */
