feat: adding a Route template with elevation chart
Co-authored-by: Yohan Boniface <yohanboniface@free.fr>

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -1049,6 +1049,10 @@ a.umap-control-caption,
     font-weight: bold;
 }
 
+.leaflet-overlay-pane > svg {
+    z-index: var(--zindex-orphan-marker);
+}
+
 /* ********************************* */
 /*         Ajax loader               */
 /* ********************************* */
