feat: add a control to print the map
Or download it as image.

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -233,6 +233,10 @@ html[dir="rtl"] .icon {
     background-position: 0 calc(var(--tile) * 4);
 }
 
+.icon-print {
+    background-position: calc(var(--tile) * 1) calc(var(--tile) * 3);
+}
+
 .icon-redo {
     background-position: calc(var(--tile) * 3) calc(var(--tile) * 7);
 }
