--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -42,6 +42,40 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     background-color: var(--color-lightGray);
 }
 
+.print-portrait,
+.print-landscape {
+    left: initial !important;
+    right: initial !important;
+    top: initial !important;
+    bottom: initial !important;
+}
+
+.print-portrait {
+    height: 100vh;
+    width: initial !important;
+}
+
+.print-landscape {
+    width: 100vw !important;
+    height: initial !important;
+}
+
+.print-a4.print-landscape {
+    aspect-ratio: 297/210;
+}
+
+.print-a4.print-portrait {
+    aspect-ratio: 210/297;
+}
+
+.print-usletter.print-landscape {
+    aspect-ratio: 11/8.5;
+}
+
+.print-usletter.print-portrait {
+    aspect-ratio: 8.5/11;
+}
+
 /* *********** */
 /* Structure   */
 /* *********** */
