wip: merge fieldsets for fields, filters and keys management
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -306,8 +306,12 @@ details summary {
     color: var(--color-light);
 }
 
-.dark details fieldset {
+.dark details fieldset:not(.formbox) {
     border: 1px solid var(--color-darkGray);
+}
+
+summary h4 {
+    display: inline;
 }
 
 fieldset legend {
